--- a/1.python/04_function_II.ipynb
+++ b/1.python/04_function_II.ipynb
@@ -635,16 +635,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fib(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    elif n == 0 :\n",
+    "        return 0\n",
+    "    else: \n",
+    "        return fib(n-1) + fib(n-2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "fib(10)"
