--- a/file_practice/0723_practice2.ipynb
+++ b/file_practice/0723_practice2.ipynb
@@ -35,33 +35,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def snail(height, day, night):\n",
-    "    \n",
-    "    #달팽이가 하루에 올라가는 총 거리\n",
-    "    up = day - night\n",
-    "    return height// up"
+    "    day_count = height//(day - night)\n",
+    "    return day_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for -> 하나씩 꺼낼 수 있는 것을 건내주면, 전부 다 꺼낼 때까지 순회한다.\n",
+    "while -> '종료조건' 에 부합할 때까지 계속해서 순회한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def snail2(height, day, night):\n",
+    "    day_count = 0\n",
+    "    while True:\n",
+    "        day_count += 1\n",
+    "        height -= day\n",
+    "        if height <= 0:\n",
+    "            return day_count\n",
+    "        height += night"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33\n"
+      "2\n",
+      "2\n"
      ]
     }
    ],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하시오.\n",
-    "print(snail(100, 5, 2))"
+    "print(snail(8, 5, 2))\n",
+    "print(snail2(8, 5, 2))"
    ]
   },
   {
@@ -84,22 +108,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_of_digit(number):\n",
-    "    sum = 0\n",
-    "    for i in range(4):\n",
-    "        sum += number % 10\n",
+    "    result = 0\n",
+    "    while number >= 1:\n",
+    "        result += number % 10\n",
     "        number = number//10\n",
     "        \n",
-    "    return sum    "
+    "    return result    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_of_digit(number):\n",
+    "    new_number = str(number)\n",
+    "    result = 0\n",
+    "    for i in new_number:\n",
+    "        result += int(i)\n",
+    "        \n",
+    "    return result  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -119,54 +158,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 재귀로 연습해보자!!\n",
+    "# 재귀 어려워ㅠㅠㅠㅠㅠㅠ\n",
     "\n",
-    "def my_add(number):\n",
+    "def recur_sum(number):\n",
     "    if number < 10:\n",
     "        return number\n",
     "    else:\n",
-    "        return my_add(number//10)"
+    "        return (number%10) + recur_sum(number//10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "10\n"
      ]
     }
    ],
    "source": [
-    "print(my_add(1234))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "def my_add(a,b):\n",
-    "    result = a + b\n",
-    "    \n",
-    "print(my_add(1,2))    "
+    "print(recur_sum(4321))"
    ]
   },
   {
