--- a/1.python/00_python_intro.ipynb
+++ b/1.python/00_python_intro.ipynb
@@ -2723,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2751,40 +2751,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 999,
-     "status": "ok",
-     "timestamp": 1595211630466,
-     "user": {
-      "displayName": "sa lee",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhvMzl7e5o13kzwjOkdZE9EdiHFu-6dYLdWQWKjuA=s64",
-      "userId": "03651723065083041662"
-     },
-     "user_tz": -540
-    },
-    "id": "iveUywDWqwP-",
-    "outputId": "141cd88a-f8a8-4fbe-db5b-78f192fa126c"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "내 이름은 salee 입니다.\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "f8R-LykBqwQF"
@@ -2796,7 +2762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2845,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2961,7 +2927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2987,7 +2953,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-20 02:22:46.650758\n"
+      "2020-07-26 23:33:17.945612\n"
      ]
     }
    ],
@@ -2999,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -3012,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3036,17 +3002,12 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic": {
-       "type": "string"
-      },
       "text/plain": [
-       "'올해는 2020년 이번달은 07월 오늘은 20일 '"
+       "datetime.datetime(2020, 7, 26, 23, 33, 57, 49235)"
       ]
      },
-     "execution_count": 80,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 13,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -3080,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3461,7 +3422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3486,19 +3447,16 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 92,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 16,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "True + 3\n",
-    "int(True)"
+    "int(True+1)"
    ]
   },
   {
