--- a/1.python/lecture/10_OOP_II.ipynb
+++ b/1.python/lecture/10_OOP_II.ipynb
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,9 +733,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "왈왈! 나는초코, 푸들(이)야\n",
+      "이것은 Puppy 클래스입니다! 이것은 Puppy 클래스입니다!\n",
+      "현재 강아지 마리수: 1\n"
+     ]
+    }
+   ],
    "source": [
     "#\n",
     "choco = Puppy('초코', '푸들')\n",
