--- a/1.python/Summary/2. data_container.md
+++ b/1.python/Summary/2. data_container.md
@@ -1,279 +1,194 @@
-# 1.Python 기초
+# 1. 컨테이너(Container)
 
-### 1-1.개요
+### 1-1. 시퀀스(sequence)형 컨테이너
 
-- 버전 : Python 3.7
-- 참고 : [Python 공식 Tutorial](https://docs.python.org/ko/3/)
+> `시퀀스` 는 순서가 있는 (ordered) 형식을 나타낸다.
 
+- 특징
 
+  순서를 가질 수 있다.
 
-### 1-2.기초 문법(Syntax)
+  특정 위치의 (index) 데이터를 가리킬 수 있다.
 
-##### 주석(Comment)
+- 종류
 
-> 주석은 주로 함수나 클래스를 설명하기 위해 활용된다.
-
-- 한 줄 주석은 `#` 으로 표현한다.
-
-```python
-# 이건 주석!
-```
-
-- 여러 줄의 주석은 `#` 을 줄마다 사용하거나,  `"""`, `'''` (multiline String)으로 표현한다. 
-
-```python
-'''
-이건
-여러줄에 걸쳐 쓸 수 있는
-주석!!
-'''
-```
-
-
-
-##### 코드 라인
-
-- '1줄에 1문장'이 원칙
-- 문장은 파이썬이 실행할 수 있는 최소한의 단위
-- 보통 파이썬에서는 `;` 를 사용하지는 않지만, 한 줄로 표기할 때 예외적으로 사용
-
-```python
-# print문을 한 줄로 이어서 썼을 때, 오류 발생
-print('hello') print('world') 
-```
-
-```python
-File "<ipython-input-4-71f683e5cf02>", line 1
-    print('hello')print('world')
-                      ^
-SyntaxError: invalid syntax
-```
-
-```python
-# ;로 오류 해결
-print('hello'); print('world')
-```
-
-```
-hello
-world
-```
-
-
-
-# 2. 변수 (Variable)
-
-### 2-1. 변수
-
-##### 할당 연산자 (Assignment Operator) : `=`
-
-- 변수는 `=` 을 통해 할당(assignment) 된다.
-- `type()` : 데이터 타입 확인
-- `id()` : 메모리 주소 확인 
-
-```python
-# 변수에 값을 할당
-a = 'salee'
-type(a)
-id(a)
-```
-
-```
-str
-140413408045016
-```
-
-- 같은 값과 다른값을 동시에 할당 할 수 있다. 
-
-```python
-# 같은 값을 동시에 할당
-x = y = 'salee'
-print(x)
-print(y)
-
-#다른 값을 동시에 할당
-a,b = 7, 20
-print(a)
-print(b)
-```
-
-```
-salee
-salee
-7
-20
-```
-
-- 변수의 개수와 값의 개수는 같아야한다.
-- 변수끼리의 값을 바꿀 수 있다.
-
-```python
-a, b = 10, 20
-a, b = b , a
-print(a)
-print(b)
-```
-
-```
-20
-10
-```
-
-
-
-##### 식별자(Identifiers)
-
-> 식별자란 변수, 함수, 모듈, 클래스 등을 식별하는데 사용되는 이름(name)이다.
-
-- 식별자의 이름은 영문알파벳(대문자, 소문자) , 언더바(_), 숫자로 구성된다.
-- 첫 글자에는 숫자  x
-- 길이에 제한이 없다.
-- 대소문자 구별
-- 예약어는 사용  x
-
-```python
-import keyword
-print(keyword.kwlist)
-```
-
-```
-['False', 'None', 'True', 'and', 'as', 'assert', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']
-```
-
-
-
-### 2-2. 데이터 타입 (Data Type)
-
-##### 숫자 (Number)
-
-- int (정수)
-
-  > 모든 정수는 `int`  로 표현한다.
-  >
-  > 8진수 : `0o`  2진수 : `0b` 16진수 : `0x`  
-
-- float (실수)
-
-  > 모든 실수는 `float` 로 표현한다.
-  >
-  > 지수 표현 방식 : `3.14`  == `314e-2`
-  >
-  > 실수를 컴퓨터가 표현하는 과정에서 부동소수점을 사용하여, 항상 같은 값으로 일치되지 않는다.
-
-  ```python
-  # a == b -> False
-  a = 3.5 - 3.2
-  b = 0.3
-  a == b
-  
-  # 1. sys 모듈 : 'epsilon'은 아주 작은 오차를 상환시켜준다.
-  import sys
-  print(sys.float_info.epsilon)
-  
-  abs(a - b) <= sys.float_info.epsilon
-  
-  # 2. math 모듈 : isclose()
-  import math
-  math.isclose(a,b)
-  ```
-
-- complex(복소수)
-
-  > 실수부와 허수부(`j`)로 구성된다.
-
-  ```python
-  x = 3 + 4j
-  # 실수
-  x.real
-  # 허수
-  x.imag
-  ```
+  리스트(list), 튜플(tuple), 레인지(range), 문자열(string), 바이너리(binary)
 
   
 
-##### 문자 (String)
+##### 리스트(list)
 
-- 문자열은 `'`  와 `"` 로 표현 가능하다.
-- 문자열 안의 문장부호는 (`\`) 를 활용해 표현 가능하다.
-- 여러줄의 문장은  `"""` 를 활용한다.
-- 문자열은 변수화가 가능하고, `+` 로 이어 붙일 수 있다.
-- 이스케이프 시퀀스
+> 리스트는 `list()`  `[]` 를 통해 만들 수 있다.
+>
+> `list[i]` 를 통해 값에 접근할 수 있다.
 
-| 예약문자 | 내용(의미) |
-| -------- | ---------- |
-| `\n`     | 줄 바꿈    |
-| `\t`     | 탭         |
-| `\r`     | 캐리지리턴 |
-| `\0`     | 널(Null)   |
-| `\\`     | \          |
-| `\'`     | '          |
-| `\"`     | "          |
+```python
+# 빈 리스트 만들기
+arr = []
 
-- String Interpolation
+# 리스트 초기화
+arr = [0]*5 # [0,0,0,0,0]
 
-  > f-strings 에서는 연산과 출력형식 지정을 할 수 있다.
+# 리스트 값 조회
+arr = [1,2,3,4,5]
+arr[3] # 4
+```
 
-  ```python
-  name = 'seunga'
-  
-  # str.format()
-  print('내 이름은 {}입니다.'.format(name))
-  
-  # f-string
-  print(f'내 이름은 {name}입니다.')
-  print(f'파이: {pi:.3}, 넓이: {pi*r*r:.3}') 
-  # -> 파이: 3.14, 넓이: 3.14e+02
-  ```
+- `enumerate()` : `list`의 **인덱스**와 **값**을 `tuple` 형태로 반환한다.
+
+- `index()` : 시퀀스형 자료의 **인덱스**를 알려준다
 
   
 
-##### 참/거짓 (Boolean)
+##### 튜플(tuple)
 
-- `bool` 타입은 `True`  와 `False`  로 이루어져있다.
-- 0, 0.0, (), [], {}, '', None 은 `False`  로 변환된다.
-- `None`  은 값이 없음을 표현한다.
+> 튜플은 `tuple()`  `()` 로 만들 수 있다.
+>
+> 튜플은 수정 불가능(immutable) 하다. 보통 직접 사용하기 보다는 파이썬 내부에서 다양히 활용된다.
 
+```python
+# 튜플 만들기
+a = (3,7)
 
-
-##### 형 변환(Type Conversion)
-
-- 암시적 형변환 (Implicit Type Conversion)
-
-  > 파이썬이 자동으로 형변환하는 경우이다. `bool`  과 Numbers(`int`, `float`, `complex`) 만 가능하다.
-
-- 명시적 형변환 (Explicit Type Conversion)
-
-  > 암시적 형변환을 제외하고는 모두 직접 형 변환을 해주어야 한다.
-
-  - `int()` : string, float를 int로 변환
-  - `float()` : string, int를 float로 변환
-  - `str()` : int, float, list, tuple, dictionary를 문자열로 변환
+# 변수의 값을 swap할 때
+a = 3
+b = 7
+(a,b) = (b,a) # a = 7, b = 3
+```
 
 
 
-### 2-3. 연산자 (Operator)
+##### 레인지(range)
 
-| 산술 연산자       | 비교 연산자          | 논리 연산자 | 복합 연산자 |
-| ----------------- | -------------------- | ----------- | ----------- |
-| + (덧셈)          | <                    | and         | a += b      |
-| - (뺄셈)          | <=                   | or          | a -= b      |
-| * (곱셈)          | >                    | not         | a *= b      |
-| / (나눗셈, float) | >=                   |             | a /= b      |
-| // (몫, int)      | ==                   |             | a //= b     |
-| % (나머지)        | !=                   |             | a %= b      |
-| ** (거듭제곱)     | is (객체)            |             | a **= b     |
-|                   | is not (부정된 객체) |             |             |
+> `range(n)` : 0 ~ (n-1)
+>
+> `range(n,m)` : n ~ (m-1)
+>
+> `range(n, m, s)` : n 부터 m-1까지 +s 만큼 증가
 
-- 단축평가
 
-  `or`  : 첫 번째 값이 확실할 때, 두 번째 값은 확인 하지 않는다. 따라서 속도가 향상된다.
 
-- 기타 연산자
+##### 시퀀스에서 활용할 수 있는 연산자 & 함수
 
-  `+` : 숫자가 아닌 자료형을 합칠 수 있다.
+```python
+# 포함 여부
+x in s
+x not in s
 
-  `in` : 요소가 속해있는지 여부를 확인할 수 있다.
+# concatenation (연쇄)
+s1 + s2
 
-  `is` : 동일한 object인지 확인할 수 있다.
+# n 만큼 반복
+s * n
 
-  `[]` , `[:]` : 값을 접근하고, 리스트를 슬라이싱할 수 있다. 
+# slicing
+s[i:j]
+s[i:j:k] # k간격으로 slicing
+
+# 길이
+len(S)
+
+# 최대/최소
+max(s)
+min(s)
+
+# x의 개수
+s.count(x)
+```
+
+
+
+----
+
+
+
+### 1-2. 비 시퀀스(Non-sequence)형 컨테이너
+
+> `비시퀀스` 는 순서가 있는 (unordered) 형식을 나타낸다.
+
+
+
+##### 세트(set)
+
+> 세트는 `set()`  `{}`  로 만들 수 있다.
+>
+> 세트는 수학의 집합과 동일하다.
+
+```python
+# 빈 집합은 {}가 아닌 set()를 사용해야 한다.
+set_a = {}
+
+# 연산자 활용
+set_a = {1,2,3}
+set_b = {3,6,9}
+
+set_a - set_b #차집합 {1,2}
+set_a | set_b #합집합 {1,2,3,6,9}
+set_a & set_b #교집합 {3}
+
+# set는 중복된 값이 존재할 수 없다
+set_c = {1,1,1,1,1} 
+print(set_c) #{1}
+
+# 따라서, list의 중복된 값을 제거할 때 쓸 수 있다.
+my_list = [1,5,1,2,1,1,3,8]
+my_set = set(my_list)
+print(list(my_set)) # [1,2,3,5,8]
+```
+
+
+
+##### 딕셔너리 (dictionary)
+
+> 딕셔너리는 `dict()` `{}` 로 만들 수 있고, `key`와 `value`로 이루어져있다.
+>
+> `key` : **immutable**한 데이터만 가능하다. (string, int, float, bool, tuple, range)
+>
+> `value` : **list**, **dictionary**를 포함한 모든 것이 가능하다.
+
+```python
+# 딕셔너리 만들기
+dict_a = dict()
+
+# 딕셔너리에는 중복된 key가 존재할 수 없다
+dict_a = {'강아지' : '멍멍', '강아지' : '왈왈', '고양이' : '야옹'}
+print(dict_a) # {'강아지' : '왈왈', '고양이' : '야옹'}
+```
+
+- `.keys()` : 딕셔너리의 `key`를 `list`로 반환한다.
+- `.values()` : 딕셔너리의 `value`를 `list`로 반환한다.
+- `.items()` : 딕셔너리의 `key`와 `value`로 이루어진 `tuple`을 `list`로 반환한다.
+
+
+
+---
+
+
+
+### 1-3. 컨테이너형 형변환
+
+
+
+|                | string |  list  | tuple  | range |  set   | dictionary |
+| :------------: | :----: | :----: | :----: | :---: | :----: | :--------: |
+|   **string**   |        |   O    |   O    |   X   |   O    |     X      |
+|    **list**    |   O    |        |   O    |   X   |   O    |     X      |
+|   **tuple**    |   O    |   O    |        |       |   O    |     X      |
+|   **range**    |   O    |   O    |   O    |       |   O    |     X      |
+|    **set**     |   O    |   O    |   O    |   X   |        |     X      |
+| **dictionary** |   O    | O(Key) | O(Key) |   X   | O(Key) |            |
+
+
+
+---
+
+
+
+### 1-4. 데이터의 분류
+
+
+
+
+
+
+
