--- a/1.python/Summary/3. control_flow.md
+++ b/1.python/Summary/3. control_flow.md
@@ -1,6 +1,6 @@
-# 1. 컨테이너(Container)
+# 1. 제어문 (Control Statement)
 
-### 1-1. 시퀀스(sequence)형 컨테이너
+### 1-1. 조건문 (Conditional Statement)
 
 > `시퀀스` 는 순서가 있는 (ordered) 형식을 나타낸다.
 
@@ -102,7 +102,7 @@ s.count(x)
 
 
 
-### 1-2. 비 시퀀스(Non-sequence)형 컨테이너
+### 1-2. 반복문 (Loop Statement)
 
 > `비시퀀스` 는 순서가 있는 (unordered) 형식을 나타낸다.
 
