--- a/1.python/Summary/3. control_flow.md
+++ b/1.python/Summary/3. control_flow.md
@@ -2,99 +2,27 @@
 
 ### 1-1. 조건문 (Conditional Statement)
 
-> `시퀀스` 는 순서가 있는 (ordered) 형식을 나타낸다.
+> `if` 문은 반드시 **True / False** 를 판단할 수 있는 조건과 함께 사용이 되어야한다.
 
-- 특징
+##### `if`  조건문
 
-  순서를 가질 수 있다.
+- 활용법
 
-  특정 위치의 (index) 데이터를 가리킬 수 있다.
+  ```python
+  if a > 0:
+      print('양수입니다.')
+  elif a < 0:
+      print('음수입니다.')
+  else:
+      print('0입니다.')
+      
+  # 조건 표현식(삼항 연산자)
+  print('양수입니다.') if num >= 0 else print('음수입니다.')
+  ```
 
-- 종류
+- 주의사항
 
-  리스트(list), 튜플(tuple), 레인지(range), 문자열(string), 바이너리(binary)
-
-  
-
-##### 리스트(list)
-
-> 리스트는 `list()`  `[]` 를 통해 만들 수 있다.
->
-> `list[i]` 를 통해 값에 접근할 수 있다.
-
-```python
-# 빈 리스트 만들기
-arr = []
-
-# 리스트 초기화
-arr = [0]*5 # [0,0,0,0,0]
-
-# 리스트 값 조회
-arr = [1,2,3,4,5]
-arr[3] # 4
-```
-
-- `enumerate()` : `list`의 **인덱스**와 **값**을 `tuple` 형태로 반환한다.
-
-- `index()` : 시퀀스형 자료의 **인덱스**를 알려준다
-
-  
-
-##### 튜플(tuple)
-
-> 튜플은 `tuple()`  `()` 로 만들 수 있다.
->
-> 튜플은 수정 불가능(immutable) 하다. 보통 직접 사용하기 보다는 파이썬 내부에서 다양히 활용된다.
-
-```python
-# 튜플 만들기
-a = (3,7)
-
-# 변수의 값을 swap할 때
-a = 3
-b = 7
-(a,b) = (b,a) # a = 7, b = 3
-```
-
-
-
-##### 레인지(range)
-
-> `range(n)` : 0 ~ (n-1)
->
-> `range(n,m)` : n ~ (m-1)
->
-> `range(n, m, s)` : n 부터 m-1까지 +s 만큼 증가
-
-
-
-##### 시퀀스에서 활용할 수 있는 연산자 & 함수
-
-```python
-# 포함 여부
-x in s
-x not in s
-
-# concatenation (연쇄)
-s1 + s2
-
-# n 만큼 반복
-s * n
-
-# slicing
-s[i:j]
-s[i:j:k] # k간격으로 slicing
-
-# 길이
-len(S)
-
-# 최대/최소
-max(s)
-min(s)
-
-# x의 개수
-s.count(x)
-```
+  **들여쓰기** (Indent) : **4spaces** 
 
 
 
@@ -104,116 +32,119 @@ s.count(x)
 
 ### 1-2. 반복문 (Loop Statement)
 
-> `비시퀀스` 는 순서가 있는 (unordered) 형식을 나타낸다.
 
 
+##### `while` 반복문
 
-##### 세트(set)
+> `while`문은 조건식이 `True`일 때, 코드를 반복하며 실행한다. 
 
-> 세트는 `set()`  `{}`  로 만들 수 있다.
->
-> 세트는 수학의 집합과 동일하다.
+- 활용법
 
 ```python
-# 빈 집합은 {}가 아닌 set()를 사용해야 한다.
-set_a = {}
-
-# 연산자 활용
-set_a = {1,2,3}
-set_b = {3,6,9}
-
-set_a - set_b #차집합 {1,2}
-set_a | set_b #합집합 {1,2,3,6,9}
-set_a & set_b #교집합 {3}
-
-# set는 중복된 값이 존재할 수 없다
-set_c = {1,1,1,1,1} 
-print(set_c) #{1}
-
-# 따라서, list의 중복된 값을 제거할 때 쓸 수 있다.
-my_list = [1,5,1,2,1,1,3,8]
-my_set = set(my_list)
-print(list(my_set)) # [1,2,3,5,8]
+num = 1
+while num <= 10:
+    print(num, end = ' ')
+    num += 1     
 ```
 
-
-
-##### 딕셔너리 (dictionary)
-
-> 딕셔너리는 `dict()` `{}` 로 만들 수 있고, `key`와 `value`로 이루어져있다.
->
-> `key` : **immutable**한 데이터만 가능하다. (string, int, float, bool, tuple, range)
->
-> `value` : **list**, **dictionary**를 포함한 모든 것이 가능하다.
-
-```python
-# 딕셔너리 만들기
-dict_a = dict()
-
-# 딕셔너리에는 중복된 key가 존재할 수 없다
-dict_a = {'강아지' : '멍멍', '강아지' : '왈왈', '고양이' : '야옹'}
-print(dict_a) # {'강아지' : '왈왈', '고양이' : '야옹'}
+```
+1 2 3 4 5 6 7 8 9 10
 ```
 
-- `.keys()` : 딕셔너리의 `key`를 `list`로 반환한다.
-- `.values()` : 딕셔너리의 `value`를 `list`로 반환한다.
-- `.items()` : 딕셔너리의 `key`와 `value`로 이루어진 `tuple`을 `list`로 반환한다.
+- 주의사항
+
+  **들여쓰기** (Indent) : **4spaces** 
+
+  반드시 **종료조건**을 설정해주어야 한다. 
 
 
 
----
+##### `for` 반복문
 
+> iterable한 객체 (`string` , `tuple`,  `list`,  `range`) 의 요소를 순회한다
 
-
-### 1-3. 컨테이너형 형변환
-
-
-
-|                | string |  list  | tuple  | range |  set   | dictionary |
-| :------------: | :----: | :----: | :----: | :---: | :----: | :--------: |
-|   **string**   |        |   O    |   O    |   X   |   O    |     X      |
-|    **list**    |   O    |        |   O    |   X   |   O    |     X      |
-|   **tuple**    |   O    |   O    |        |       |   O    |     X      |
-|   **range**    |   O    |   O    |   O    |       |   O    |     X      |
-|    **set**     |   O    |   O    |   O    |   X   |        |     X      |
-| **dictionary** |   O    | O(Key) | O(Key) |   X   | O(Key) |            |
-
-
-
----
-
-
-
-### 1-4. 데이터의 분류
-
-##### immuatable (변경 불가능한 것)
-
-`number` , `string` , `Boolean` , `range` , `tuple`
+- 활용법
 
 ```python
-# 새로운 주소를 할당받기 때문에 복사가 이루어지지 않는다.
-num1 = 20
-num2 = num1 
-num2 = 10
+# iterable한 객체를 순회하며 하나씩 출력한다.
+numbers = [1,2,3,4,5]
+for number in numbers:
+    print(number, end = ' ')
 
-print(num1) # 20
-print(num2) # 10
+# range(), len()으로 list의 index를 조작할 수 있다.
+lunch = ['짜장면','초밥', '피자', '햄버거']
+for i in range(len(lunch)):
+    print(lunch[i], end = ' ')
+
+# enumerate()로 index와 value를 함께 활용할 수 있다.
+for idx, menu in enumerate(lunch, start=1):
+    print(idx, end = ' ')
+    print(menu)  
 ```
 
+```
+1 2 3 4 5
 
+짜장면 초밥 피자 햄버거
 
-##### mutable (변경 가능한 것)
+1 짜장면
+2 초밥
+3 피자
+4 햄버거
+```
 
-`list` , `dict` , `set` , 사용자가 만든 데이터 타입
+- 반복제어
 
 ```python
-# 같은 데이터 주소를 공유하기 때문에 원본이 변경된다
-num1 = [1,2,3,4]
-num2 = num1
-num2[0] = 100
+# break : for / while 문에서 빠져나간다
+for i in range(1,10):
+    print(i, end = ' ')
+    if i >= 5:
+        break
+        
+# continue : 다시 for / while 시작 부분으로 돌아가 다음 요소부터 반복한다
+for i in range(6):
+    if i % 2 == 0:
+        continue
+        print(f'{i}는 짝수다')
+    print(f'{i}는 홀수다')
+    
+# for-else : for문을 끝까지 실행한 후 else를 실행한다 
+numbers = [1, 5, 10]
+for num in numbers:
+  if num == 3:
+    print('3을 찾았습니다')
+    break
+else:
+  print('해당 숫자가 없습니다.') 
 
-print(num1) # [100,2,3,4]
-print(num2) # [100,2,3,4]
+# break문으로 종료되는 경우에는 else가 실행되지 않는다
+for num in numbers:
+  if num ==5:
+    print('5를 찾았습니다.')
+    break
+else:
+  print('해당 숫자가 없습니다.')
+
+# pass : 아무것도 하지 않는다
+name = 'salee'
+if name == 'salee':
+    pass
+print('Bye Bye')
+```
+
+```
+1 2 3 4 5
+
+1는 홀수다
+3는 홀수다
+5는 홀수다
+
+해당 숫자가 없습니다.
+
+5를 찾았습니다.
+
+Bye Bye
 ```
 
 
