--- a/1.python/Summary/6. data_structure.md
+++ b/1.python/Summary/6. data_structure.md
@@ -294,7 +294,7 @@ print(even_list)
 
 > `mutable` , `unordered` , `iterable` 
 
-- 추가 및 삭제
+- **추가 및 삭제**
 
 `.add(elem)` : **elem** 을 세트에 **추가**한다.
 
@@ -307,11 +307,31 @@ print(even_list)
 `.pop()` : **임의의 원소**를 **제거**하고 반환한다.
 
 ```python
+# .add()
+a = {'사과', '바나나', '수박'}
+a.add('사과')
+print(a)
 
+# .update()
+a.update({'토마토', '토마토', '딸기'}, {'포도', '레몬'})
+print(a)
+
+# .remove()
+a.remove('애플') # --> KEyError
+
+# .discard()
+a.discard('수박') # --> Error x
+
+# .pop()
+print(a.pop())
+print(a)
 ```
 
 ```
-
+{'바나나', '사과', '수박'}
+{'바나나', '수박', '딸기', '포도', '사과', '레몬', '토마토'}
+바나나
+{'수박', '딸기', '포도', '사과', '레몬', '토마토'}
 ```
 
 
@@ -322,9 +342,72 @@ print(even_list)
 
 ### 1-4. 딕셔너리 (Dictionary)
 
+> `mutable` , `unordered` , `iterable` 
+
+- **조회**
+
+  `.get(key[, default])` : **key**를 통해 **value**를 가져온다. **없으면 None**을 반환한다.
+
+```python
+my_dict = {'apple': '사과', 'banana': '바나나', 'melon': '멜론'}
+print(my_dict.get('pineapple'))
+print(my_dict.get('apple'))
+print(my_dict.get('pineapple', 1))
+```
+
+```
+None
+사과
+1
+```
 
 
 
+- **추가 및 삭제**
+
+  `.pop(key[, default])` : **key**를 통해 요소를 **제거한 값**을 돌려준다. **없으면 default**를 반환한다. default가 없으면 **KeyError**가 발생한다.
+
+  `.update()` : **key**, **value**를 **덮어쓰거나 추가**한다.
+
+```python
+# .pop()
+my_dict = {'apple': '사과', 'banana': '바나나'}
+my_dict.pop('apple')
+print(my_dict)
+
+my_dict.pop('melon', 0)
+
+# .update()
+my_dict = {'apple': '사과', 'banana': '바나나', 'melon': '멜론'}
+my_dict.update(apple='애플')
+print(my_dict)
+
+my_dict.update(pineapple = '파인애플')
+print(my_dict)
+```
+
+```
+{'banana': '바나나'}
+0
+{'apple': '애플', 'banana': '바나나', 'melon': '멜론'}
+{'apple': '애플', 'banana': '바나나', 'melon': '멜론', 'pineapple': '파인애플'}
+```
+
+
+
+- **Dictionary Comprehension**
+
+  List comprehension과 유사하게, **조건문에 참**인 식으로 **딕셔너리를 생성**한다.
+
+```python
+blood_types = {'A': 40, 'B': 11, 'AB': 4, 'O': 45}
+negative_blood_types = {'-' + types: num for types, num in blood_types.items()}
+print(negative_blood_types)
+```
+
+```
+{'-A': 40, '-B': 11, '-AB': 4, '-O': 45}
+```
 
 
 
