--- a/1.python/Summary/7. Module.md
+++ b/1.python/Summary/7. Module.md
@@ -1,4 +1,4 @@
-# 1. OOP (Object Oriented Programming)
+# 1. 모듈 (Module)
 
 > 모듈(Module)은 특정 기능을 하는 코드를 **파일 단위** (`.py`) 로 작성한 것이다.
 
@@ -16,6 +16,10 @@ def odd(n):
 def even(n):
     return not bool(n % 2)
 ```
+
+
+
+---
 
 
 
@@ -66,6 +70,10 @@ my_package/ # 상위 패키지
 
 
 
+---
+
+
+
 ### 2-2. 패키지 활용
 
 - `from` , `import` 키워드로 패키지와 모듈을 가져와 활용할 수 있다.
@@ -113,10 +121,5 @@ from module import *
 from package import module
 from package.module import var, function, Class
 ```
-
-
-
-
-
 
 
