--- a/1.python/lecture/10_OOP_II.ipynb
+++ b/1.python/lecture/10_OOP_II.ipynb
@@ -105,135 +105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "class Person:\n",
-    "    species = 'human'\n",
-    "    \n",
-    "    def __init__(self, name):\n",
-    "        self.name = name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "john = Person('john')\n",
-    "eric = Person('eric')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 클래스 변수에는 어떻게 접근할 수 있을까요?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "human\n"
-     ]
-    }
-   ],
-   "source": [
-    "#\n",
-    "print(Person.species)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 클래스가 공유하는 변수라고 했는데, 객체에서 클래스 변수에 접근/재할당을 해봅시다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "salee\n",
+      "john\n",
       "human\n",
-      "human\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(john.species)\n",
-    "print(eric.species)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 클래스 변수는 실제로 같은 값을 공유하는 걸까요? 값을 한 번 변경해봅시다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "john.species = 'developer'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "developer\n"
      ]
     }
    ],
    "source": [
+    "class Person:\n",
+    "    species = 'human'\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "salee = Person('salee')         \n",
+    "john = Person('john')\n",
+    "print(salee.name)\n",
+    "print(john.name)\n",
+    "\n",
+    "john.species = 'developer'\n",
+    "print(salee.species)\n",
     "print(john.species)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "human\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(eric.species)"
    ]
   },
   {
