--- a/2.Web/Summary/1. HTML.md
+++ b/2.Web/Summary/1. HTML.md
@@ -112,11 +112,12 @@ id, class, hidden, lang, style, tabindex, title
 
 - **시맨틱 태그**
 
-> HTML5에서 의미론적 요소를 담은 태그가 등장했다. 
+> HTML 요소의 의미를 담은 태그이다. 단순한 데이터 집합을 **의미**와 **관련성**을 가지도록 구축한다. 
 >
-> `<header>`  `<nav>`  `<aside>`  `<section>`  `<article>`  `<footer>`  `<h1>`  `<tb>`  와 같은 의미를 담은 태그 
+> HTML5에 새롭게 추가된 태그 : `header`  `nav`  `aside`  `section`  `article`  `footer`  
 >
-> * Non sementic : `<span>`  `<div>`
+> * Non semantic : `<span>`  `<div>`
+> * semantic : `header`  `nav`  `aside`  `section`  `article`  `footer`  `h1`  `form`  등..
 
 **장점**
 
@@ -165,9 +166,9 @@ id, class, hidden, lang, style, tabindex, title
 
   `<ol> `, `<ul>` : list(ordered) , list(unordered)
 
-  `<pre>` , `<blockquote>` : 
+  `<pre>` , `<blockquote>` : 미리 서식을 지정한 텍스트, 안쪽의 텍스트가 긴 인용문임을 나타낸다.
 
-  `<div>` : 
+  `<div>` : 플로우 컨텐츠를 위한 컨테이너이다.
 
   
 
@@ -189,7 +190,7 @@ id, class, hidden, lang, style, tabindex, title
 
   `<thead>` , `<tbody>` , `<tfoot>` : 헤더, 바디, 풋
 
-  ` <caption> `
+  ` <caption> ` : 표의 설명 또는 제목을 나타낸다.
 
   셀 병합 속성 : colspan , rowspan
 
