--- a/2.Web/Summary/2. CSS.md
+++ b/2.Web/Summary/2. CSS.md
@@ -52,3 +52,15 @@ fixed:
 
 
 sticky:
+
+
+
+### Flexbox
+
+- Container & Items : 부모 자식
+
+- flex-direction : 주 축을 설장(수평 혹은 수직)
+- justify-content : 주 축의 배치 방법을 설정
+- align-items : 교차 축의 배치 방식을 설정 (주로 한 줄일 때 사용)
+- 
+
