--- a/1.python/Summary/1. python_intro.md
+++ b/1.python/Summary/1. python_intro.md
@@ -284,7 +284,9 @@ print(keyword.kwlist)
 
 - 단축평가
 
-  `or`  : 첫 번째 값이 확실할 때, 두 번째 값은 확인 하지 않는다. 따라서 속도가 향상된다.
+  `a or b`  : a가 참이면 a를 리턴하고,  거짓이면 b를 리턴한다.
+
+  `a and b` : a가 거짓이면 a를 리턴하고, 참이면 b를 리턴한다.  
 
 - 기타 연산자
 
@@ -294,4 +296,22 @@ print(keyword.kwlist)
 
   `is` : 동일한 object인지 확인할 수 있다.
 
-  `[]` , `[:]` : 값을 접근하고, 리스트를 슬라이싱할 수 있다. 
+  `[]`  : index를 기준으로 값에 접근한다.
+  
+  `[:]` : index를 기준으로 리스트와 문자열을 슬라이싱한다. 
+  
+  ```python
+  # [:] index 가 list,string의 길이보다 길다면 어떻게 될까?
+  numbers = [1,2,3,4,5]
+  words = 'python'
+  
+  print(numbers[3:8])
+  print(words[3:8])
+  ```
+  
+  ```
+  [4, 5]
+  hon
+  ```
+  
+  
