--- a/1.python/Summary/5. error_exception.md
+++ b/1.python/Summary/5. error_exception.md
@@ -1,57 +1,27 @@
-# 1. 함수 (Function)
+# 1. 에러 (Error)
 
-> 함수는 **특정한 기능**을 하는 코드의 묶음이다.
+
+
+### 1-1. 문법 에러 (Syntax Error)
+
+> 문법 에러가 발생하면 프로그램은 실행되지 않는다.
 >
-> **가독성**, **재사용성**, **유지보수** 측면에서 함수는 코드에 중요한 부분을 담당한다.
-
-
-
-### 1-1. 함수의 선언과 호출
-
-> 함수 선언은 `def` 로 시작하여 `:` 로 끝난다. 
+> `SyntaxError`  키워드와 함께 `파일이름` `줄번호`  `^`  로 문법 에러가 발생한 위치를 알려준다.
 >
-> 함수는 `매개변수(parameter)` 를 넘겨주고, 함수 동작 후에 `return`을 통해 결과값을 전달한다.
->
-> 단, `return` 값이 없으면, `None`를 반환한다.
-
-- 예시
+> 단, `^` 가 항상 정확한 오류 발생 지점을 알려 주지 않으므로, `^` 가 지정한 위치 전후를 살펴보아야 한다.
 
 ```python
-# 사각형의 넓이와 둘레를 구하는 함수
-def rectangle(width, height):
-    area = width * height
-    perimeter = (width + height) *2
-    return (area, perimeter)
-
-print(rectangle(30, 20))
-print(rectangle(50, 70))
+if True:
+    print('참')
+else
+    print('거짓')
 ```
 
 ```
-(600, 100)
-(3500, 240)
-```
-
-
-
-- python에는 [내장함수](https://docs.python.org/ko/3/library/functions.html)가 존재한다.
-
-```python
-# 내장 함수의 목록을 확인할 수 있다.
-dir(__builtins__)
-```
-
-
-
-- `print()` `.sort()` 처럼 `return` 값이 없는 함수도 있다.
-
-```python
-result = print('hi')
-type(result)
-```
-
-```
-NoneType
+  File "<ipython-input-1-e832de0e3f84>", line 4
+    else
+        ^
+SyntaxError: invalid syntax
 ```
 
 
@@ -60,25 +30,123 @@ NoneType
 
 
 
-### 1-2. 함수의 Output
+### 1-2. 예외 (Exception)
 
-- `return` 
+> 예상하지 못한 상황을 맞이하면, 프로그램은 실행을 멈춘다.
 
-  함수는 `return` 으로 어떠한 종류의 객체를 반환한다. 단, 오직 **한 개의 객체**만 반환할 수 있다.
+- `ZeroDivisionError` : '0'으로 숫자를 나눌 때 발생한다.
 
 ```python
-# list를 입력받고 list를 반환할 수 있다.
-def my_list_max (a, b):
-    if sum(a) >= sum(b):
-        return a
-    else:
-        return b
-
-my_list_max([10, 3], [5, 9])    
+print(5/0)
 ```
 
 ```
-[5, 9]
+Traceback (most recent call last):
+  File "homework4.py", line 1, in <module>
+    print(5/0)
+ZeroDivisionError: division by zero
+```
+
+
+
+- `NameError` : 변수가 정의되지 않았을 때 발생한다. 
+
+```python
+print(name)
+```
+
+```
+Traceback (most recent call last):
+  File "homework4.py", line 1, in <module>
+    print(name)
+NameError: name 'name' is not defined
+```
+
+
+
+- `TypeError` : 타입이 다른 변수끼리 연산하려 할 때 발생한다. (자동 형변환 제외)
+
+```python
+a = '123'
+print(1+a)
+```
+
+```
+Traceback (most recent call last):
+  File "homework4.py", line 2, in <module>
+    print(1+a)
+TypeError: unsupported operand type(s) for +: 'int' and 'str'
+```
+
+
+
+- `IndexError` : 범위를 넘어가는 인덱스를 조회할 때 발생한다.
+
+```python
+a = [1,2,3,4,5]
+print(a[5])
+```
+
+```
+Traceback (most recent call last):
+  File "homework4.py", line 2, in <module>
+    print(a[5])
+IndexError: list index out of range
+```
+
+
+
+- `KeyError` : 딕셔너리에 없는 key로 접근할 때 발생한다.
+
+```python
+a = {'1반':10, '2반':20}
+print(a['3반'])
+```
+
+```
+Traceback (most recent call last):
+  File "homework4.py", line 2, in <module>
+    print(a['3반'])
+KeyError: '3반'
+```
+
+
+
+- `ModuleNotFoundError` : 모듈의 이름이 잘못되었을 때 발생한다.
+
+```python
+import randoms
+a = random.choice([1,2,3,4,5])
+print(a)
+```
+
+```
+Traceback (most recent call last):
+  File "homework4.py", line 1, in <module>
+    import randoms
+ModuleNotFoundError: No module named 'randoms'
+```
+
+
+
+- `ImportError` : 패키지는 찾았지만, 안에 import하려는 모듈이 없을 때 발생한다.
+
+```python
+# Animal.py
+class Dog:
+    def __init__(self, name, breed):
+        self.name = name
+        self.breed = breed
+
+# example.py
+from Animal import Bird
+```
+
+```
+Traceback (most recent call last):
+  File "homework4.py", line 1, in <module>
+    from Animal import Bird
+ImportError: cannot import name 'Bird' form 'Animal'
 ```
 
 
@@ -87,156 +155,126 @@ my_list_max([10, 3], [5, 9])
 
 
 
-### 1-3. 함수의 Input
+# 2. 예외 처리 (Exception Handling)
 
-- **매개변수(Parameter)**
+### 2-1. try & except
 
-  함수의 정의 부분 (`def func(x):`) 에서 `x` 는 매개변수이다.
-
-  입력을 받아 `함수 내부`에서 활용될 `변수`이다.
-
-  
-
-- **전달인자(Argument)**
-
-  함수의 호출 부분 (`func(2)`) 에서 `2` 는 전달인자이다.
-
-  실제로 전달되는 `입력값`이다.
+> `try`  아래의 code block이 실행되고, **예외가 발생하면 남은 부분을 수행하지 않고 `except`  를 실행한다.** 
 
 ```python
-# 원기둥의 부피를 구하는 함수
-def cylinder (r, h):
-    area = r * r* 3.14
-    volume = area * h
-    return volume
-
-# 함수는 전달인자를 위치로 판단하기 때문에 순서 주의!!
-print(cylinder(5,2))
-print(cylinder(2,5))
+try:    
+    num = input('값을 입력하시오 : ')
+    print(int(num))
+except:    
+    print('숫자를 다시 입력해주세요.')
 ```
 
 ```
-157.0
-62.800000000000004
+값을 입력하시오 : 값
+숫자를 다시 입력해주세요.
 ```
 
 
 
-- **기본 인자 값 (Default Argument Values)**
+---
 
-  함수가 호출될 때, 인자를 지정하지 않아도 **기본 값**을 설정할 수 있다.
+
+
+### 2-2. as
+
+> `as`  로 에러 메시지를 보여줄 수도 있다 
 
 ```python
-def my_sum(a,b=0):
-    return a + b
-
-my_sum(3,5) # 기본 인자 값이 설정되어 있어도, 기존의 함수처럼 사용할 수 있다.
-my_sum(3) # 인자가 없으면 기본 인자 값이 활용된다.
+try:
+    empty_list = []
+    print(empty_list[-1])
+except IndexError as error:
+    print(error)
 ```
 
 ```
-8
+list index out of range
+```
+
+
+
+---
+
+
+
+### 2-3.  복수의 예외 처리
+
+> tuple로 여러개의 예외를 지정하거나, 각각 다른 오류를 출력할 수 있다.
+>
+> 단, **에러가 순차적으로 수행**되므로, 가장 작은 범주부터 시작해야 한다.
+
+```python
+# 여러가지 예외를 지정하기
+try:
+    num = input('100으로 나눌 값을 입력하시오: ')
+    print(100/int(num))
+except (ValueError, ZeroDivisionError):
+    print('무언가가 잘 못 되었습니다.')
+    
+# 오류의 종류에 따라 다른 메시지 출력하기.    
+try:
+    num = input('100으로 나눌 값을 입력하시오: ')
+    100/int(num)
+except ValueError:
+    print('글자가 아닌 숫자를 입력해주세요')
+except ZeroDivisionError:
+    print('0으로는 나눗셈을 할 수 없습니다.')
+```
+
+```
+100으로 나눌 값을 입력하시오: 값
+무언가가 잘 못 되었습니다.
+```
+
+```
+100으로 나눌 값을 입력하시오: 0
+0으로는 나눗셈을 할 수 없습니다.
+```
+
+
+
+- `else`
+
+  `else` 로 에러가 발생하지 않았을 때, 실행 시킬 문장을 지정한다.
+
+```python
+try:
+    numbers = [1, 2, 3]
+    number = numbers[2]
+except IndexError:
+    print('오류 발생')
+else:
+    print(number)
+```
+
+```
 3
 ```
 
-​		**기본 인자값을 가지는 인자 다음에는 무조건 기본 인자값이 있는 인자가 올 수 있다.**
+
+
+- `finally`
+
+  `finally` 는 반드시 실행되어야 하는 코드에 활용한다. **예외 발생 여부와 관계없이 항상 실행된다.**
 
 ```python
-# 오류
-def greeting(grade = 1, name):
-    return f'{grade}학년 {name}님, 환영합니다.'
-
-# 수정
-def greeting(grade = 1, name = '익명'):
-    return f'{grade}학년 {name}님, 환영합니다.'
-
-greeting(4)
+try:
+    languages = {'python': 'good'}
+    languages['java']
+except KeyError as err:
+    print(f'{err}는 딕셔너리에 없는 키입니다.')
+finally:
+    print('감사합니다')
 ```
 
 ```
-  File "<ipython-input-15-82da26a98acc>", line 1
-    def greeting(grade = 1, name):
-                ^
-SyntaxError: non-default argument follows default argument
-
-'4학년 익명님, 환영합니다.'
-```
-
-
-
-- **키워드 인자 (Keyword Argument)**
-
-  키워드 인자는 직접 `변수명으로 특정 인자를 전달`한다.
-
-```python
-# 인자의 위치가 바뀌었지만, 변수명으로 지정해주어 결과는 동일하다
-def greeting(age, name = '익명'):
-    return f'{age}세 {name}님 환영합니다.'
-
-greeting(age =20, name ='홍길동')
-greeting(name ='홍길동', age=20)
-```
-
-```
-'20세 홍길동님 환영합니다.'
-'20세 홍길동님 환영합니다.'
-```
-
-​		**단, 키워드 인자는 모든 변수에 사용하던지, 맨 뒤 변수에만 사용해야 한다.**
-
-```python
-greeting(age= 20, '홍길동')
-```
-
-```
-  File "<ipython-input-22-0b8edc84d504>", line 1
-    greeting(age= 20, '홍길동')
-                     ^
-SyntaxError: positional argument follows keyword argument
-```
-
-
-
-- **가변 인자 리스트 (Arbitarary Argument Lists)**
-
-  `*args` 를 활용하여 개수가 정해지지 않은 임의의 인자를 받는다.
-
-  가변 인자 리스트는 `tuple` 로 처리되고, 매개변수에 `*` 로 표현한다.
-
-```python
-import sys
-
-def my_max(*args):
-    max_value = -sys.maxsize
-    for i in args:
-        if max_value < i:
-            max_value = i    
-    return max_value
-
-my_max(-1, -2, -3, -4)
-```
-
-```
--1
-```
-
-
-
-- **가변 키워드 인자 (Arbitarary Keyword Argument)**
-
-  `**kwargs`를 활용하여 인자를 받아 처리할 수 있다.
-
-  정해지지않은 키워드 인자는 `dict` 로 처리되고, 매개변수에 `**` 로 표현한다.
-
-```python
-def my_dict(**kwargs):
-    return kwargs
-
-my_dict(한국어='안녕',영어='hi', 독일어 = 'guten tag', 프랑스어 = 'bon jour')
-```
-
-```
-{'한국어': '안녕', '영어': 'hi', '독일어': 'guten tag', '프랑스어': 'bon jour'}
+'java'는 딕셔너리에 없는 키입니다.
+감사합니다
 ```
 
 
@@ -245,10 +283,41 @@ my_dict(한국어='안녕',영어='hi', 독일어 = 'guten tag', 프랑스어 = 
 
 
 
-### 1-4. 함수와 스코프
+### 2-4. 예외 발생 시키기 (Exception Raising)
 
 
 
-### 1-5. 재귀함수
+- `raise`
+
+  `raise` 로 예외를 강제로 발생시킬 수 있다. 조용히 발생하는 논리 오류를 명시적으로 발생시키고 싶을 때 활용한다. 
+
+```python
+def my_div(num1, num2):
+    if num2 == 0:
+        raise Zerodivision('오류가 발생하였습니다.')
+    elif type(num1) == str or type(num2) == str:
+        raise ValueError('숫자를 넣어주세요')
+    else:
+        return num1 // num2
+    pass
+
+my_div('1', '5')
+```
+
+```
+ValueError: 숫자를 넣어주세요
+```
 
 
+
+- `assert`
+
+  `assert` 는 상태를 검증하는데 사용되고 무조건 `AssertionError` 가 발생한다. `raise` 와 달리 검증식이 거짓일 때만 발생한다.
+
+|                | raise       | assert             |
+| -------------- | ----------- | ------------------ |
+| 용도/목적      | 예외의 발생 | 상태의 검증        |
+| 예외 발생 시점 | 항상        | 검증식이 거짓일 때 |
+| 예외 종류      | 지정한 오류 | AssertionError     |
+
+정확한 오류 정보를 전달하기 위해서는 `raise`가 더 적합하다. 
