--- a/1.python/Summary/8. OOP.md
+++ b/1.python/Summary/8. OOP.md
@@ -267,6 +267,83 @@ sd([1,2,3,4,5])
 
 ### 1-5. 인스턴스 & 클래스 메서드 (+스태틱 메서드)
 
+- 인스턴스 메서드(instance method)
+
+  > 인스턴스가 사용할 메서드이다. 클래스 내부에 정의되는 메서드는 기본적으로 인스턴스 메서드이다.
+  >
+  > **호출 시, 첫번째 인자로 인스턴스 자신 `self` 가 전달된다.** 
+
+
+
+- 클래스 메서드 (class method)
+
+  > 클래스가 사용할 메서드이다. `@classmethod` 데코레이터를 사용하여 정의한다.
+  >
+  > **호출 시, 첫번째 인자로 클래스 `cls` 가 전달된다.**
+
+
+
+- 스태틱 메서드 (static method)
+
+  > 클래스가 사용할 메서드이다. `@staticmethod` 데코레이터를 사용하여 정의한다. 
+  >
+  > **호출 시, 어떠한 인자도 전달되지 않는다.**
+
+  
+
+ ```python
+class Puppy:
+    population = 0
+    
+    def __init__(self, name, breed):
+        self.name = name
+        self.breed = breed
+        Puppy.population += 1
+        
+    def __del__(self):
+        Puppy.population -= 1
+    
+    def bark(self):
+        return f'왈왈! 나는{self.name}, {self.breed}(이)야'
+    
+    @classmethod
+    def get_population(cls):
+        return f'현재 강아지 마리수: {cls.population}'
+    
+    @staticmethod
+    def info():
+        return '이것은 Puppy 클래스입니다!'
+    
+    
+
+choco = Puppy('초코', '푸들')
+
+# instance method
+print(choco.bark())
+
+# static method
+print(choco.info(), Puppy.info())
+
+# class method
+print(Puppy.get_population())    
+ ```
+
+```
+왈왈! 나는초코, 푸들(이)야
+이것은 Puppy 클래스입니다! 이것은 Puppy 클래스입니다!
+현재 강아지 마리수: 1
+```
+
+**(참고)**
+
+인스턴스와 클래스 모두 3가지 메서드에 접근이 가능하지만, 각각의 용도에 맞게 사용하도록 한다!!!
+
+인스턴스 메서드 : 인스턴스가 할 행동
+
+클래스 메서드 : 클래스 자체와 그 속성에 접근할 필요가 있을 때
+
+정적 메서드 : 클래스와 클래스 속성에 접근할 필요가 없을 때
+
 
 
 ---
@@ -274,6 +351,42 @@ sd([1,2,3,4,5])
 
 
 ### 1-6. 상속
+
+> 클래스는 상속된다. 부모 클래스의 모든 속성이 자식 클래스에 상속되므로 **코드의 재사용성**이 높아진다.
+
+```python
+# 부모 클래스
+class Person:     
+    population = 0 
+    
+    def __init__(self, name='사람'): 
+        self.name = name
+        Person.population += 1
+    
+    def greeting(self):
+        print(f'반갑습니다. {self.name}입니다.')
+        
+# 자식 클래스     
+class Student(Person):
+    def __init__(self, student_id, name = '학생'):
+        self.name = name
+        self.student_id = student_id  
+        Person.population += 1
+
+        
+s = Student(1)
+s.greeting()
+```
+
+```
+반갑습니다. 학생입니다.
+```
+
+- `super()`
+
+
+
+
 
 
 
@@ -284,6 +397,14 @@ sd([1,2,3,4,5])
 
 
 ### 1-7. 메서드 오버라이딩
+
+> Method Overriding : 자식 클래스에서 부모 클래스의 메서드를 재정의하는 것이다.
+>
+> 상속 받은 클래스에서 **같은 이름의 메서드**로 덮어쓰는 개념이다.
+
+
+
+
 
 
 
