--- a/1.python/lecture/11_OOP_III.ipynb
+++ b/1.python/lecture/11_OOP_III.ipynb
@@ -420,20 +420,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "안녕, 홍길동\n",
-      "안녕, 김싸피\n"
+      "안녕, 이승아\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'student@naver.com'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#\n",
     "class Person:\n",
     "    def __init__(self, name, age, number, email):\n",
     "        self.name = name\n",
@@ -447,35 +455,15 @@
     "        \n",
     "class Student(Person):\n",
     "    def __init__(self, name, age, number, email, student_id):\n",
-    "        # Person()\n",
+    "        # Person() 클래스의 __init__을 사용한다.\n",
     "        super().__init__(name, age, number, email)\n",
     "        self.student_id = student_id\n",
     "        \n",
     "        \n",
-    "p1 = Person('홍길동', 200, '0101231234', 'hong@gildong')\n",
-    "s1 = Student('김싸피', 20, '12312312', 'student@naver.com', '190000')\n",
+    "p1 = Person('이다혜', 21, '0101231234', 'hong@gildong')\n",
+    "s1 = Student('이승아', 25, '12312312', 'student@naver.com', '190000')\n",
     "\n",
-    "p1.greeting()\n",
-    "s1.greeting()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'student@naver.com'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "s1.greeting()\n",
     "s1.email"
    ]
   },
@@ -624,12 +612,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "충성! 이병 이승아\n"
+     ]
+    }
+   ],
    "source": [
     "# Person 클래스의 상속을 받아 군인처럼 인사하는 Soldier 클래스를 만들어봅시다.\n",
-    "\n",
     "class Person:\n",
     "    def __init__(self, name, age, number, email):\n",
     "        self.name = name\n",
@@ -638,16 +633,8 @@
     "        self.email = email \n",
     "        \n",
     "    def greeting(self):\n",
-    "        print(f'안녕, {self.name}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
+    "        print(f'안녕, {self.name}')\n",
+    "        \n",
     "class Soldier(Person):\n",
     "    def __init__(self, name, age, number, email, army):\n",
     "        super().__init__(name, age, number, email)\n",
@@ -655,26 +642,10 @@
     "        \n",
     "    # method overriding    \n",
     "    def greeting(self):\n",
-    "        print(f'충성! {self.army} {self.name}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "충성! 하사 굳건이\n"
-     ]
-    }
-   ],
-   "source": [
-    "#\n",
-    "s = Soldier('굳건이', 25, '0101234', 'soldier@roka.kr', '하사')\n",
-    "s.greeting()"
+    "        print(f'충성! {self.army} {self.name}')     \n",
+    "        \n",
+    "s = Soldier('이승아', 25, '01012345678', 'soldier@roka.kr', '이병')\n",
+    "s.greeting()    "
    ]
   },
   {
@@ -766,20 +737,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'챱챱'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Person 클래스를 정의합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
     "class Person:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
@@ -790,217 +762,38 @@
     "    \n",
     "    \n",
     "    def greeting(self):\n",
-    "        return f'hi, {self.name}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mom 클래스를 정의합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
+    "        return f'hi, {self.name}'\n",
+    "    \n",
+    "# 1. Person을 상속받은 Mom class    \n",
     "class Mom(Person):\n",
     "    gene = 'XX'\n",
     "    \n",
     "    def swim(self):\n",
-    "        return '첨벙첨벙'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dad 클래스를 정의합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
+    "        return '첨벙첨벙'\n",
+    "    \n",
+    "    \n",
+    "# 2. Person을 상속받은 Dad class   \n",
     "class Dad(Person):\n",
     "    gene = 'XY'\n",
     "    \n",
     "    def walk(self):\n",
-    "        return '성큼성큼'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FirstChild 클래스를 정의합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "class FirstChild(Dad, Mom):  # 상속의 순서가 중요합니다.(왼쪽에서 오른쪽). gene은 Dad의 gene값을 가져오게 됩니다.\n",
-    "    def swim(self):  # Mom의 swim 메서드를 overriding 합니다.\n",
+    "        return '성큼성큼'\n",
+    "    \n",
+    "\n",
+    "# 3. Dad, Mom을 상속받은 Baby class    \n",
+    "class Baby(Dad, Mom):  \n",
+    "    def swim(self): \n",
     "        return '챱챱'\n",
     "    \n",
     "    \n",
-    "    def cry(self):  # Child 만이 가지는 인스턴스 메서드 입니다.\n",
-    "        return '응애'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FirstChild 의 인스턴스 객체를 확인합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "baby = FirstChild('아가')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cry 메서드를 실행합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'응애'"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#\n",
-    "baby.cry()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# swim 메서드를 실행합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'챱챱'"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#\n",
-    "baby.swim()  # override 된 Child 의 swim 을 호출합니다"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# walk 메서드를 실행합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'성큼성큼'"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#\n",
-    "baby.walk()  # Dad 의 walk 를 호출합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gene 은 누구의 속성을 참조할까요?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'XY'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#\n",
-    "baby.gene"
+    "    def cry(self): \n",
+    "        return '응애'\n",
+    "    \n",
+    "\n",
+    "firstchild = Baby('아가')\n",
+    "firstchild.gene\n",
+    "firstchild.swim()\n",
+    "firstchild.walk()"
    ]
   },
   {
@@ -1014,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +860,7 @@
        "'응애'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +890,7 @@
        "'아장아장'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +950,7 @@
        "'XX'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
