--- a/1.python/Summary/8. OOP.md
+++ b/1.python/Summary/8. OOP.md
@@ -382,13 +382,42 @@ s.greeting()
 반갑습니다. 학생입니다.
 ```
 
+
+
 - `super()`
 
+  > 자식 클래스에서 부모 클래스의 내용을 사용하고자 할 때, `super()` 를 사용한다.
 
+```python
+class Person:
+    def __init__(self, name, age, number, email):
+        self.name = name
+        self.age = age
+        self.number = number
+        self.email = email 
+        
+    def greeting(self):
+        print(f'안녕, {self.name}')
+        
+        
+class Student(Person):
+    def __init__(self, name, age, number, email, student_id):
+        # Person() 클래스의 __init__을 사용한다.
+        super().__init__(name, age, number, email)
+        self.student_id = student_id
+        
+        
+p1 = Person('이다혜', 21, '0101231234', 'hong@gildong')
+s1 = Student('이승아', 25, '12312312', 'student@naver.com', '190000')
 
+s1.greeting()
+s1.email
+```
 
-
-
+```
+안녕, 이승아
+student@naver.com
+```
 
 
 
@@ -402,11 +431,35 @@ s.greeting()
 >
 > 상속 받은 클래스에서 **같은 이름의 메서드**로 덮어쓰는 개념이다.
 
+```python
+class Person:
+    def __init__(self, name, age, number, email):
+        self.name = name
+        self.age = age
+        self.number = number
+        self.email = email 
+        
+    def greeting(self):
+        print(f'안녕, {self.name}')
+        
+class Soldier(Person):
+    def __init__(self, name, age, number, email, army):
+        super().__init__(name, age, number, email)
+        self.army = army
+        
+    # method overriding    
+    def greeting(self):
+        print(f'충성! {self.army} {self.name}')     
+        
+s = Soldier('이승아', 25, '01012345678', 'soldier@roka.kr', '이병')
+s.greeting()        
+```
 
+```
+충성! 이병 이승아
+```
 
-
-
-
+**(참고)** 상속관계에서 이름 공간은 `인스턴스  - 자식 클래스 - 부모 클래스 - 전역` 순으로 확장된다. 
 
 
 
@@ -416,9 +469,48 @@ s.greeting()
 
 ### 1-8. 다중 상속
 
+> 두개 이상의 클래스를 상속받을 수 있다.
+>
+> **상속은 왼쪽에서 오른쪽 순**으로 이루어지기 때문에 **method overriding에 유의**하여 상속받아야 한다.
 
+```python
+class Person:
+    def __init__(self, name):
+        self.name = name
 
+    
+# 1. Person을 상속받은 Mom class    
+class Mom(Person):
+    gene = 'XX'
+    
+    def swim(self):
+        return '첨벙첨벙'
+    
+    
+# 2. Person을 상속받은 Dad class   
+class Dad(Person):
+    gene = 'XY'
+    
+    def walk(self):
+        return '성큼성큼'
+    
 
+# 3. Dad, Mom을 상속받은 Baby class    
+class Baby(Dad, Mom):  
+    def swim(self): 
+        return '챱챱'
+ 
+    
 
+firstchild = Baby('아가')
+firstchild.gene
+firstchild.walk()
+firstchild.swim()
+```
 
+```
+XY
+'성큼성큼'
+'챱챱'
+```
 
