--- a/0.Startcamp/03.Software_StartCamp.md
+++ b/0.Startcamp/03.Software_StartCamp.md
@@ -10,7 +10,7 @@
 
 **고객의 문제에 공감**하는 단계이다. 기술, 정치, 경제, 문화 등 다양한 분야에 대한 호기심을 바탕으로 사용자가 겪을 문제점을 사전에 예측할 수 있다. 
 
-![image-20200821004721599](클래스 (class).assets/image-20200821004721599.png)
+![image-20200821004721599](03.Software_StartCamp.assets/image-20200821004721599.png)
 
 
 
@@ -18,7 +18,7 @@
 
 공감단계에서 얻은 통찰을 바탕으로 진짜 **문제를 정의**하는 과정이다.  `페르소나 기법`을  활용하여 특정 고객이 겪는 **Pain Point를 발굴**하기도 한다.
 
-![image-20200821004827092](클래스 (class).assets/image-20200821004827092.png)
+![image-20200821004827092](03.Software_StartCamp.assets/image-20200821004827092.png)
 
 
 
@@ -26,7 +26,7 @@
 
 고객에게 적합한 **해결방안을 자유롭게 제시**하는 단계이다. **Pain Point 개선**을 중심으로 여러 사람들이 의견을 공유하고 발전시키는 단계이다. 
 
-![image-20200821004901489](클래스 (class).assets/image-20200821004901489.png)
+![image-20200821004901489](03.Software_StartCamp.assets/image-20200821004901489.png)
 
 
 
@@ -34,7 +34,7 @@
 
 새로운 아이디어를 `프로토타입`으로 만들거나 `시나리오`를 만드는 단계이다.  **Quick & Dirty**한 방법으로 제품, 서비스에 대한 **아이디어를 구체화**한다.
 
-![image-20200821005010277](클래스 (class).assets/image-20200821005010277.png)
+![image-20200821005010277](03.Software_StartCamp.assets/image-20200821005010277.png)
 
 
 
@@ -42,7 +42,7 @@
 
 프로토타입에 대한 **고객의 피드백을 바탕으로 프로토타입을 개선**하는 단계이다. 이 과정을 반복하며 제품의 완성도를 높일 수 있다.
 
-![image-20200821005045065](클래스 (class).assets/image-20200821005045065.png)
+![image-20200821005045065](03.Software_StartCamp.assets/image-20200821005045065.png)
 
 
 
