--- a/1.python/1. python_intro.md
+++ b/1.python/1. python_intro.md
@@ -142,6 +142,7 @@ print(b)
 - 예약어는 사용  x
 
 ```python
+# 예약어 확인하기
 import keyword
 print(keyword.kwlist)
 ```
@@ -237,9 +238,16 @@ print(keyword.kwlist)
   print(f'내 이름은 {name}입니다.')
   print(f'파이: {pi:.3}, 넓이: {pi*r*r:.3}') 
   # -> 파이: 3.14, 넓이: 3.14e+02
+  # ---------------------------------------
+    y = 2020
+    m = 8
+    d = 1
+    print('%4d/%02d/%02d'%(y, m, d))
+  	# -> 2020/08/01
   ```
 
   
+
 
 ##### 참/거짓 (Boolean)
 
@@ -311,9 +319,9 @@ print(keyword.kwlist)
   print(words[3:8])
   ```
   
-  ```
+    ```
   [4, 5]
   hon
-  ```
+    ```
   
   
