--- a/1.python/6. data_structure.md
+++ b/1.python/6. data_structure.md
@@ -83,6 +83,10 @@ hehe
   `.lower()` : 모두 소문자로 만들어 반환한다.
 
   `.swapcase()` : 대소문자를 변경하여 반환한다.
+  
+  `.chr()` : 유니코드를 문자로 변환한다.
+  
+  `.ord()` : 문자를 유니코드로 변환한다.
 
 ```python
 a = 'hI! everyone, I\'m kim'
@@ -361,6 +365,38 @@ print(my_dict.get('pineapple', 1))
 None
 사과
 1
+```
+
+```python
+# 혈액형 분류하기 (in 연산자 활용)
+def count_blood(bloods):
+	blood_dict = {}
+    for blood in bloods:
+        if blood in blood_dict:
+            blood_dict[blood] += 1
+        else:
+            blood_dict[blood] = 1
+	
+    return print(blood_dict)
+
+count_blood([
+    'A' , 'B', 'A', 'O', 'AB', 'AB',
+    'O' , 'A', 'B', 'O', 'B', 'AB',
+    ])    
+```
+
+```python
+# 혈액형 분류하기 (.get 메서드 활용)
+def count_blood(bloods):
+    blood_dict = {}
+    for blood in bloods:
+        blood_dict[blood] = blood_dict.get[blood,0] + 1
+    return print(blood_dict)
+
+count_blood([
+    'A' , 'B', 'A', 'O', 'AB', 'AB',
+    'O' , 'A', 'B', 'O', 'B', 'AB',
+    ])   
 ```
 
 
