--- a/1.python/8. OOP.md
+++ b/1.python/8. OOP.md
@@ -61,6 +61,8 @@ print((3+4j).imag)
 
   `class` 키워드로 클래스를 생성할 수 있다. 클래스 내부에는 **데이터**와 **method**를 정의할 수 있다.
 
+  > Python에서 기본적으로 생성되어있는 클래스 :  `int`  `float`  `str`  `list`  `dict`  등..
+
 - **인스턴스(Instance) 생성**
 
   정의된 **클래스에 속하는 객체**를 클래스의 인스턴스(instance) 라고 한다.
@@ -152,6 +154,44 @@ salee
 - **매직메서드**
 
   특별한 일을 하기 위해 만들어진 메서드이다. 더블언더스코어(`__something__)` 형태이다. 
+
+  - `__init__`  :  인스턴스 객체가 생성될 때 호출된다. `__init__`으로 인스턴스의 속성을 정의할 수 있다.
+
+  - `__del__  ` : 인스턴스 객체가 사라지기 직전에 호출되는 함수이다. 
+
+  - `__str__`  : 인스턴스를 print()로 출력 할 때 사용한다. 디버깅할 때 유용하게 사용한다.
+
+  - `__repr__` : 시스템이 해당 객체를 인식할 수 있는 공식적인 문자열 형태로 반환할 때 사용한다. 
+
+    `__str__ ` 과`__repr__`의 차이점
+
+```python
+class Person:
+    
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+
+    def __str__(self):
+        return f'이름은 : {self.name} , 나이는 : {self.age}'
+
+    def __repr__(self):
+        return f'<Person: {self.name}>'
+
+p1 = Person('승아', 25)
+
+print(p1) #1
+p1 #2
+```
+
+```
+#1
+이름은 : 승아 , 나이는 : 25 
+#2
+<Person: 승아> 
+```
+
+
 
 - **`self` : 인스턴스 자신**
 
