--- a/1.python/4. function.md
+++ b/1.python/4. function.md
@@ -339,6 +339,25 @@ def fibo(n):
         return 0
     else:
         return fibo(n-1) + fibo(n-2)
+    
+# 자릿수 더하기
+def recur_sum(number):
+    if number < 10:
+        return number
+    else:
+        return (number%10) + recur_sum(number//10)
+    
+# 회문 판별
+def is_pal_recursive(word):
+    # 문자열 길이가 1이거나 0이면 팰린드롬
+    if len(word) < 2:
+        return True
+    # 양끝을 비교한다
+    else:
+        if word[0] == word[-1]:
+            return is_pal_recursive(word[1:-1])
+        else:
+            return False
 ```
 
 재귀함수는 반복문에 비해 **직관적**이고 **변수 사용을 줄일 수 있다**. 하지만, 함수가 호출될 때마다 메모리 공간에 쌓이기 때문에 **프로그램 실행 속도가 늘어지는 단점**이 있다.
