--- a/3.Algorithm/08.SW응용_Problems.md
+++ b/3.Algorithm/08.SW응용_Problems.md
@@ -55,12 +55,11 @@ for tc in range(1, 1+T):
 
 #### 풀이 03)
 
-✔
-
-✔
+✔ 입력받은 2진수와 3진수를 한자리씩 수정하며 같은 10진수인지 확인한다.
 
 ```python
-def correct(i, n, mistake): # n진수 한자리씩 수정하는 함수
+# n진수 한자리씩 수정하는 함수
+def correct(i, n, mistake):
     temp = mistake[:]
     temp[i//n] = str(i % n)
     ans = ''.join(temp)
@@ -90,9 +89,9 @@ for tc in range(1, 1+T):
 
 #### 풀이 04)
 
-✔
+✔ 모든 password는 1로 끝나기 때문에, 암호를 뒤에서부터 판독하여 1이 나오면 정해진 길이만큼 추출한다.
 
-✔
+✔ 추출한 암호가 유효한지 확인한다.
 
 ```python
 def find_code(N, M):
@@ -229,12 +228,12 @@ for tc in range(1, 1+T):
 
 ```python
 def babygin():
-    i = r1 = t1 = r2 = t2 = 0
+    i = 0
     while i < 10:
         if (player1[i] >= 3) or (player1[i] >= 1 and player1[i+1] >= 1 and player1[i+2] >= 1):
             return 1
         if (player2[i] >= 3) or player2[i] >= 1 and player2[i+1] >= 1 and player2[i+2] >= 1:
-            return 2    
+            return 2
         i += 1
     return 0
 
@@ -272,12 +271,30 @@ for tc in range(1, 1+T):
 
 #### 풀이 09)
 
-✔
+✔ 이동방향은 우,하 2가지 뿐이므로, 각 칸의 최소합을 구하면 된다.
 
-✔
+✔ 가장자리(세로) : +윗칸 
+
+✔ 가장자리(가로) : +왼쪽칸
+
+✔ 나머지: +(윗칸과 왼쪽칸 중 더 작은 값)
 
 ```python
-
+T = int(input())
+for tc in range(1, 1+T):
+    N = int(input())
+    arr = [list(map(int, input().split())) for _ in range(N)]
+    distance = [[0]*N for _ in range(N)]
+    distance[0][0] = arr[0][0]
+    for x in range(N):
+        for y in range(N):
+            if x == 0:
+                distance[x][y] = distance[x][y-1] + arr[x][y]
+            elif y == 0:
+                distance[x][y] = distance[x-1][y] + arr[x][y]
+            else:
+                distance[x][y] = min(distance[x][y-1], distance[x-1][y]) + arr[x][y]
+    print(f'#{tc} {distance[N-1][N-1]}')
 ```
 
 ---
@@ -286,15 +303,53 @@ for tc in range(1, 1+T):
 
 #### 풀이 10)
 
-```python
+✔
 
+✔
+
+```python
+def p(depth, n):
+    if depth == n:
+        route.append(arr[:])
+        return
+    for idx in range(depth, n):
+        arr[idx], arr[depth] = arr[depth], arr[idx]
+        p(depth+1, n)
+        arr[idx], arr[depth] = arr[depth], arr[idx]
+
+#----------------------------------------------------------------
+T = int(input())
+for tc in range(1, 1+T):
+    N = int(input())
+    battery = [list(map(int, input().split())) for _ in range(N)]
+    arr = [n+2 for n in range(N-1)]
+    route = []
+    # 경로 경우의수 (순열)
+    p(0, N-1)
+    # 각 경로의 배터리 소비량 찾기
+    min = 987654321
+    res = 0
+    while route:
+        r = route.pop()
+        res += battery[0][r[0]-1]
+        for i in range(len(r)-1):
+            res += battery[r[i]-1][r[i+1]-1]
+        res += battery[r[-1]-1][0]
+        if res < min:
+            min = res
+        res = 0
+    print(f'#{tc} {min}')
 ```
 
 ---
 
-#### 문제 11)
+#### 문제 11) [1244. [S/W 문제해결 응용] 2일차 - 최대 상금](https://swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AV15Khn6AN0CFAYD#)
 
 #### 풀이 11)
+
+✔
+
+✔
 
 ```python
 
