--- a/3.Algorithm/08.SW응용_Problems.md
+++ b/3.Algorithm/08.SW응용_Problems.md
@@ -355,3 +355,53 @@ for tc in range(1, 1+T):
 
 ```
 
+---
+
+#### 문제 12) [1865. 동철이의 일 분배](https://swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AV5LuHfqDz8DFAXc)
+
+#### 풀이 12)
+
+✔
+
+✔
+
+![image-20201030164512783](08.SW%EC%9D%91%EC%9A%A9_Problems.assets/image-20201030164512783.png)
+
+```python
+def p(n, k, x):
+    global max
+    if x <= max:
+        return
+    elif n == k and x > max:
+        max = x
+    else:
+        for idx in range(n, k):
+            arr[idx], arr[n] = arr[n], arr[idx]
+            p(n+1, k, x*prob[n][arr[n]]/100)
+            arr[idx], arr[n] = arr[n], arr[idx]
+
+#--------------------------------------------------
+T = int(input())
+for tc in range(1, 1+T):
+    N = int(input())
+    prob = [list(map(int, input().split())) for _ in range(N)]
+    arr = [i for i in range(N)]
+    max = 0
+    p(0, N, 1)
+    print('#%d %.6f' % (tc, max*100))
+```
+
+---
+
+#### 문제 13) [4008. [모의 SW 역량테스트] 숫자 만들기](https://swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AWIeRZV6kBUDFAVH#)
+
+#### 풀이 13)
+
+✔
+
+✔
+
+```python
+
+```
+
