--- a/3.Algorithm/08.SW응용_Problems.md
+++ b/3.Algorithm/08.SW응용_Problems.md
@@ -28,7 +28,7 @@ for tc in range(1, 1+T):
 
 ✔ 실수에 2를 곱하여 정수부분을 차례로 출력한다.
 
-![image-20201027112705045](08.Bit.assets/image-20201027112705045.png)
+![image-20201027112705045](08.SW%EC%9D%91%EC%9A%A9_Problems.assets/image-20201027112705045.png)
 
 ```python
 T = int(input())
@@ -347,12 +347,45 @@ for tc in range(1, 1+T):
 
 #### 풀이 11)
 
-✔
+✔  x만큼 자리를 바꾼 모든 숫자를 구하여 memo[x]에 저장한다. 
 
-✔
+✔ 같은 횟수만큼 바꿨을 때 같은 숫자가 나오면 return하여 실행속도를 줄인다.
+
+✔ 주어진 횟수만큼 모두 바꾼 숫자가 최댓값인지 확인한다.
 
 ```python
+def exchange(x):
+    global my_max
+    new_num = int(''.join(number))
+    # x만큼 바꾼 숫자가 memo에 있으면 return
+    if new_num in memo[x]:
+        return
+    # memo에 없으면 memo[x]에 기록
+    memo[x].append(new_num)
+    # 주어진 횟수(cnt)만큼 숫자 자리 바꾸기
+    if x == cnt:
+        if new_num > my_max:
+            my_max = new_num
+        return
+    else:
+        for i in range(len(number)-1):
+            for j in range(i+1, len(number)):
+                number[i], number[j] = number[j], number[i]
+                exchange(x+1)
+                number[i], number[j] = number[j], number[i]
 
+#-------------------------------------------
+T = int(input())
+for tc in range(1, 1+T):
+    number, cnt = input().split()
+    number = list(number)
+    cnt = int(cnt)
+    # 주어진 횟수 만큼 자리를 바꾼 숫자 기록
+    memo = [[] for _ in range(cnt+1)]
+    # 최대값
+    my_max = 0
+    exchange(0)
+    print(f'#{tc} {my_max}')
 ```
 
 ---
