--- a/3.Algorithm/09. 완전검색&그리디.md
+++ b/3.Algorithm/09. 완전검색&그리디.md
@@ -1,4 +1,4 @@
-# SW응용 (Problems)
+# 완전검색 & 그리디
 
 #### 문제 01) 5185. [파이썬 S/W 문제해결 구현] 1일차 - 이진수
 
@@ -28,7 +28,7 @@ for tc in range(1, 1+T):
 
 ✔ 실수에 2를 곱하여 정수부분을 차례로 출력한다.
 
-![image-20201027112705045](08.SW%EC%9D%91%EC%9A%A9_Problems.assets/image-20201027112705045.png)
+![image-20201027112705045](08.%20%EB%B9%84%ED%8A%B8&%EC%A7%84%EC%88%98.assets/image-20201027112705045-1604298975967.png)
 
 ```python
 T = int(input())
@@ -397,8 +397,6 @@ for tc in range(1, 1+T):
 ✔
 
 ✔
-
-![image-20201030164512783](08.SW%EC%9D%91%EC%9A%A9_Problems.assets/image-20201030164512783.png)
 
 ```python
 def p(n, k, x):
