--- a/3.Algorithm/01. List1.md
+++ b/3.Algorithm/01. List1.md
@@ -52,5 +52,5 @@ for tc in range(1, T+1):
         print(f'#{tc} {cnt}')
 ```
 
-
+![image-20201103091250033](01.%20List1.assets/image-20201103091250033.png)
 
