--- a/3.Algorithm/10. 분할정복.md
+++ b/3.Algorithm/10. 분할정복.md
@@ -1,3 +1,14 @@
+# 분할정복
+
+#### 문제 01) 5204. [파이썬 S/W 문제해결 구현] 4일차 - 병합 정렬
+
+#### 풀이 01) 
+
+✔ 병합 정렬 : list의 길이가 1이 될 때 까지 나누고, 2개의 list값들을 처음부터 하나씩 비교하며 두 개의 list값 중에서 더 작은 값을 새로운 list에 옮긴다. 
+
+✔ 시간복잡도 : T(n) = nlog₂n(비교) + 2nlog₂n(이동) = 3nlog₂n = O(nlog₂n)
+
+``` python
 def merge_sort(arr):
     global cnt
     # 분할
@@ -6,7 +17,7 @@ def merge_sort(arr):
     mid = len(arr) // 2
     left = merge_sort(arr[:mid])
     right = merge_sort(arr[mid:])
-
+ 
     # 병합
     merged = []
     l = r = 0
@@ -17,14 +28,14 @@ def merge_sort(arr):
         else:
             merged.append(right[r])
             r += 1
-
+            
     # 오른쪽이 먼저 모두 복사되었을 때 (왼쪽 list가 남아있을 때)
     if left[l:]:
         cnt += 1
     merged.extend(left[l:])
     merged.extend(right[r:])
     return merged
-
+ 
 # -------------------------------------------
 T = int(input())
 for tc in range(1, 1+T):
@@ -33,3 +44,25 @@ for tc in range(1, 1+T):
     cnt = 0
     merged = merge_sort(arr)
     print(f'#{tc} {merged[N//2]} {cnt}')
+```
+
+---
+
+#### 문제 02) 5205. [파이썬 S/W 문제해결 구현] 4일차 - 퀵 정렬
+
+#### 풀이 02) 
+
+✔ 퀵 정렬 : 
+
+✔ 시간복잡도 :
+
+```python
+
+```
+
+
+
+
+
+
+
